@@ -86,6 +86,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fixed connection limit to take web seeds into account as well
 	* fixed bug when receiving a have message before having the metadata
 	* fixed python bindings build with disabled DHT support
 	* fixed BSD file allocation issue
